--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/KhatriStudio/flutter_testing_app/refs/heads/main/favicon.png"/>
 
   <title>flutter_application_1</title>
   <link rel="manifest" href="manifest.json">
@@ -62,7 +62,7 @@
 </script>
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script src="https://raw.githubusercontent.com/KhatriStudio/flutter_testing_app/refs/heads/main/flutter_bootstrap.js" async></script>
   <h1>Latest Blogger Posts</h1>
     <div id="posts">Loading...</div>
 
