--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <base href="https://raw.githubusercontent.com/KhatriStudio/flutter_testing_app/refs/heads/main/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -24,17 +24,17 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="flutter_application_1">
-  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/KhatriStudio/flutter_testing_app/refs/heads/main/icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/KhatriStudio/flutter_testing_app/refs/heads/main/favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>flutter_application_1</title>
-  <link rel="manifest" href="https://raw.githubusercontent.com/KhatriStudio/flutter_testing_app/refs/heads/main/manifest.json">
+  <link rel="manifest" href="manifest.json">
 
 </head>
 <body>
-  <script src="https://raw.githubusercontent.com/KhatriStudio/flutter_testing_app/refs/heads/main/flutter_bootstrap.js" async></script>
+  <script src="flutter_bootstrap.js" async></script>
   <h1>Latest Blogger Posts</h1>
     <div id="posts">Loading...</div>
 
