--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="https://raw.githubusercontent.com/KhatriStudio/flutter_testing_app/refs/heads/main/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -31,13 +31,8 @@
 
   <title>flutter_application_1</title>
   <link rel="manifest" href="manifest.json">
-
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
-  <h1>Latest Blogger Posts</h1>
-    <div id="posts">Loading...</div>
-
-
 </body>
 </html>
